--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musepolyfill.bgsize.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "jquery.watch.js", "require.js", "index.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musepolyfill.bgsize.js", "jquery.watch.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "require.js", "index.css"], "outOfDate":[]};
 </script>
   
   <title>Home Page</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3866580668"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=3791718839" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=440678596" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
@@ -27,7 +27,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/open-sans:n4:default.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/KSYtvpESjem9zeRLilVyWw4shs0rKMO-EJbnoylhphtfenjgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAukSku8jWZ8SkGHfwQpMsMMeMb6MqGIQWmDZZMgUSRs3b9.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/S83VibPfIFuaIV6cc37ZgYX8_RtHTvlyBCtm0CwO8fwfenjgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAukSku8jWZ8SkGHfwQpMsMMeMb6MqGIQWmDZZMg1Fds3b9.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -42,60 +42,6 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <p>&nbsp;</p>
    </div>
    <!-- /m_editable -->
-   <div class="PamphletWidget clearfix grpelem" id="pamphletu5708"><!-- none box -->
-    <div class="ThumbGroup clearfix grpelem" id="u5709"><!-- none box -->
-     <div class="popup_anchor" id="u5710popup">
-      <div class="Thumb popup_element clearfix" id="u5710"><!-- column -->
-       <div class="colelem" id="u5712"><!-- simple frame --></div>
-       <div class="colelem" id="u5713"><!-- simple frame --></div>
-       <div class="colelem" id="u5711"><!-- simple frame --></div>
-      </div>
-     </div>
-    </div>
-    <div class="popup_anchor" id="u5714popup">
-     <div class="ContainerGroup clearfix" id="u5714"><!-- stack box -->
-      <div class="Container invi clearfix grpelem" id="u5715"><!-- column -->
-       <!-- m_editable region-id="editable-static-tag-U5721-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link" -->
-       <div class="museBGSize clearfix colelem" id="u5721-3" data-muse-uid="U5721" data-muse-type="txt_frame"><!-- content -->
-        <p>&nbsp;</p>
-       </div>
-       <!-- /m_editable -->
-       <!-- m_editable region-id="editable-static-tag-U5720-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-       <a class="nonblock nontext clearfix colelem" id="u5720-4" href="bible-readings.html" data-href="page:U4021" data-muse-uid="U5720" data-muse-type="txt_frame"><!-- content --><p id="u5720-2">READINGS</p></a>
-       <!-- /m_editable -->
-       <!-- m_editable region-id="editable-static-tag-U5716-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-       <a class="nonblock nontext clearfix colelem" id="u5716-4" href="sermon.html" data-href="page:U5450" data-muse-uid="U5716" data-muse-type="txt_frame"><!-- content --><p id="u5716-2">SERMONS</p></a>
-       <!-- /m_editable -->
-       <!-- m_editable region-id="editable-static-tag-U5717-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-       <a class="nonblock nontext clearfix colelem" id="u5717-4" href="discipleship.html" data-href="page:U5578" data-muse-uid="U5717" data-muse-type="txt_frame"><!-- content --><p id="u5717-2">DISCIPLESHIP</p></a>
-       <!-- /m_editable -->
-       <!-- m_editable region-id="editable-static-tag-U5719-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-       <a class="nonblock nontext clearfix colelem" id="u5719-4" href="events.html" data-href="page:U5505" data-muse-uid="U5719" data-muse-type="txt_frame"><!-- content --><p id="u5719-2">EVENTS</p></a>
-       <!-- /m_editable -->
-       <!-- m_editable region-id="editable-static-tag-U5718-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-       <a class="nonblock nontext clearfix colelem" id="u5718-4" href="openlife.html" data-href="page:U5698" data-muse-uid="U5718" data-muse-type="txt_frame"><!-- content --><p id="u5718-2">OPENLIFE</p></a>
-       <!-- /m_editable -->
-       <div class="clearfix colelem" id="pu5895"><!-- group -->
-        <!-- m_editable region-id="editable-static-tag-U5895-BP_infinity" template="index.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
-        <a class="nonblock nontext clip_frame grpelem" id="u5895" href="http://gawleruniting.org.au" data-muse-uid="U5895"><!-- svg --><img class="svg" id="u5893" src="images/pasted-svg-109665x109.svg?crc=3939634654" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_.png?crc=4011030576" data-image-width="60" data-image-height="60"/></a>
-        <!-- /m_editable -->
-        <!-- m_editable region-id="editable-static-tag-U5876-BP_infinity" template="index.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
-        <a class="nonblock nontext clip_frame grpelem" id="u5876" href="https://www.facebook.com/gawlerunitingchurch" data-muse-uid="U5876"><!-- svg --><img class="svg" id="u5874" src="images/pasted-svg-109665x1092.svg?crc=223350899" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_2.png?crc=4111301327" data-image-width="60" data-image-height="60"/></a>
-        <!-- /m_editable -->
-        <!-- m_editable region-id="editable-static-tag-U5886-BP_infinity" template="index.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
-        <a class="nonblock nontext clip_frame grpelem" id="u5886" href="tel:(08)85225269" data-muse-uid="U5886"><!-- svg --><img class="svg" id="u5884" src="images/pasted-svg-109665x1093.svg?crc=4186153669" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_3.png?crc=4204566227" data-image-width="60" data-image-height="60"/></a>
-        <!-- /m_editable -->
-       </div>
-      </div>
-     </div>
-    </div>
-    <div class="popup_anchor" id="u5725popup">
-     <div class="PamphletCloseButton PamphletLightboxPart popup_element clearfix" id="u5725"><!-- group -->
-      <div class="grpelem" id="u5727" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0.7071,M12=0.7071,M21=-0.7071,M22=0.7071,SizingMethod='auto expand')" data-mu-ie-matrix-dx="3" data-mu-ie-matrix-dy="-9"><!-- simple frame --></div>
-      <div class="grpelem" id="u5726" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0.7071,M12=-0.7071,M21=0.7071,M22=0.7071,SizingMethod='auto expand')" data-mu-ie-matrix-dx="3" data-mu-ie-matrix-dy="-9"><!-- simple frame --></div>
-     </div>
-    </div>
-   </div>
    <div class="clearfix grpelem" id="pu2863-3"><!-- group -->
     <div class="browser_width grpelem" id="u2863-3-bw">
      <!-- m_editable region-id="editable-static-tag-U2863-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link" -->
@@ -112,13 +58,69 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
      <!-- /m_editable -->
     </div>
+    <div class="clearfix grpelem" id="u5933"><!-- group -->
+     <a class="anchor_item grpelem" id="top"></a>
+     <div class="PamphletWidget clearfix grpelem" id="pamphletu5708"><!-- none box -->
+      <div class="ThumbGroup clearfix grpelem" id="u5709"><!-- none box -->
+       <div class="popup_anchor" id="u5710popup">
+        <div class="Thumb popup_element clearfix" id="u5710"><!-- column -->
+         <div class="colelem" id="u5712"><!-- simple frame --></div>
+         <div class="colelem" id="u5713"><!-- simple frame --></div>
+         <div class="colelem" id="u5711"><!-- simple frame --></div>
+        </div>
+       </div>
+      </div>
+      <div class="popup_anchor" id="u5714popup">
+       <div class="ContainerGroup clearfix" id="u5714"><!-- stack box -->
+        <div class="Container invi clearfix grpelem" id="u5715"><!-- column -->
+         <!-- m_editable region-id="editable-static-tag-U5721-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link" -->
+         <div class="museBGSize clearfix colelem" id="u5721-3" data-muse-uid="U5721" data-muse-type="txt_frame"><!-- content -->
+          <p>&nbsp;</p>
+         </div>
+         <!-- /m_editable -->
+         <!-- m_editable region-id="editable-static-tag-U5720-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+         <a class="nonblock nontext clearfix colelem" id="u5720-4" href="bible-readings.html" data-href="page:U4021" data-muse-uid="U5720" data-muse-type="txt_frame"><!-- content --><p id="u5720-2">READINGS</p></a>
+         <!-- /m_editable -->
+         <!-- m_editable region-id="editable-static-tag-U5716-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+         <a class="nonblock nontext clearfix colelem" id="u5716-4" href="sermon.html" data-href="page:U5450" data-muse-uid="U5716" data-muse-type="txt_frame"><!-- content --><p id="u5716-2">SERMONS</p></a>
+         <!-- /m_editable -->
+         <!-- m_editable region-id="editable-static-tag-U5717-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+         <a class="nonblock nontext clearfix colelem" id="u5717-4" href="discipleship.html" data-href="page:U5578" data-muse-uid="U5717" data-muse-type="txt_frame"><!-- content --><p id="u5717-2">DISCIPLESHIP</p></a>
+         <!-- /m_editable -->
+         <!-- m_editable region-id="editable-static-tag-U5719-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+         <a class="nonblock nontext clearfix colelem" id="u5719-4" href="events.html" data-href="page:U5505" data-muse-uid="U5719" data-muse-type="txt_frame"><!-- content --><p id="u5719-2">EVENTS</p></a>
+         <!-- /m_editable -->
+         <!-- m_editable region-id="editable-static-tag-U5718-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+         <a class="nonblock nontext clearfix colelem" id="u5718-4" href="openlife.html" data-href="page:U5698" data-muse-uid="U5718" data-muse-type="txt_frame"><!-- content --><p id="u5718-2">OPENLIFE</p></a>
+         <!-- /m_editable -->
+         <div class="clearfix colelem" id="pu5895"><!-- group -->
+          <!-- m_editable region-id="editable-static-tag-U5895-BP_infinity" template="index.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
+          <a class="nonblock nontext clip_frame grpelem" id="u5895" href="http://gawleruniting.org.au" data-muse-uid="U5895"><!-- svg --><img class="svg" id="u5893" src="images/pasted-svg-109665x109.svg?crc=3939634654" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_.png?crc=4011030576" data-image-width="60" data-image-height="60"/></a>
+          <!-- /m_editable -->
+          <!-- m_editable region-id="editable-static-tag-U5876-BP_infinity" template="index.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
+          <a class="nonblock nontext clip_frame grpelem" id="u5876" href="https://www.facebook.com/gawlerunitingchurch" data-muse-uid="U5876"><!-- svg --><img class="svg" id="u5874" src="images/pasted-svg-109665x1092.svg?crc=223350899" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_2.png?crc=4111301327" data-image-width="60" data-image-height="60"/></a>
+          <!-- /m_editable -->
+          <!-- m_editable region-id="editable-static-tag-U5886-BP_infinity" template="index.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
+          <a class="nonblock nontext clip_frame grpelem" id="u5886" href="tel:(08)85225269" data-muse-uid="U5886"><!-- svg --><img class="svg" id="u5884" src="images/pasted-svg-109665x1093.svg?crc=4186153669" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_3.png?crc=4204566227" data-image-width="60" data-image-height="60"/></a>
+          <!-- /m_editable -->
+         </div>
+        </div>
+       </div>
+      </div>
+      <div class="popup_anchor" id="u5725popup">
+       <div class="PamphletCloseButton PamphletLightboxPart popup_element clearfix" id="u5725"><!-- group -->
+        <div class="grpelem" id="u5727" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0.7071,M12=0.7071,M21=-0.7071,M22=0.7071,SizingMethod='auto expand')" data-mu-ie-matrix-dx="3" data-mu-ie-matrix-dy="-9"><!-- simple frame --></div>
+        <div class="grpelem" id="u5726" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0.7071,M12=-0.7071,M21=0.7071,M22=0.7071,SizingMethod='auto expand')" data-mu-ie-matrix-dx="3" data-mu-ie-matrix-dy="-9"><!-- simple frame --></div>
+       </div>
+      </div>
+     </div>
+    </div>
    </div>
    <!-- m_editable region-id="editable-static-tag-U799-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link" -->
    <div class="Title clearfix grpelem" id="u799-4" data-muse-uid="U799" data-muse-type="txt_frame"><!-- content -->
     <h1>Becoming all God created you to be</h1>
    </div>
    <!-- /m_editable -->
-   <a class="anchor_item grpelem" id="top"></a>
    <div class="verticalspacer" data-offset-top="718" data-content-above-spacer="718" data-content-below-spacer="0"></div>
   </div>
   <!-- Other scripts -->
@@ -127,7 +129,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 16);return 0},g=function(g){for(var f=document.getElementsByTagName("link"),h=0;h<f.length;h++)if("text/css"==f[h].type){var i=(f[h].href||"").match(/\/?css\/([\w\-]+\.css)\?crc=(\d+)/);if(!i||!i[1]||!i[2])break;b[i[1]]=i[2]}f=document.createElement("div");f.className="version";f.style.cssText="display:none; width:1px; height:1px;";document.getElementsByTagName("body")[0].appendChild(f);for(h=0;h<Muse.assets.required.length;){var i=Muse.assets.required[h],l=i.match(/([\w\-\.]+)\.(\w+)$/),k=l&&l[1]?
 l[1]:null,l=l&&l[2]?l[2]:null;switch(l.toLowerCase()){case "css":k=k.replace(/\W/gi,"_").replace(/^([^a-z])/gi,"_$1");f.className+=" "+k;k=a(c(f,"color"));l=a(c(f,"backgroundColor"));k!=0||l!=0?(Muse.assets.required.splice(h,1),"undefined"!=typeof b[i]&&(k!=b[i]>>>24||l!=(b[i]&16777215))&&Muse.assets.outOfDate.push(i)):h++;f.className="version";break;case "js":h++;break;default:throw Error("Unsupported file type: "+l);}}d?d().jquery!="1.8.3"&&Muse.assets.outOfDate.push("jquery-1.8.3.min.js"):Muse.assets.required.push("jquery-1.8.3.min.js");
 f.parentNode.removeChild(f);if(Muse.assets.outOfDate.length||Muse.assets.required.length)f="Some files on the server may be missing or incorrect. Clear browser cache and try again. If the problem persists please contact website author.",g&&Muse.assets.outOfDate.length&&(f+="\nOut of date: "+Muse.assets.outOfDate.join(",")),g&&Muse.assets.required.length&&(f+="\nMissing: "+Muse.assets.required.join(",")),alert(f)};location&&location.search&&location.search.match&&location.search.match(/muse_debug/gi)?setTimeout(function(){g(!0)},5E3):g()}};
-var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.musepolyfill.bgsize","webpro","musewpslideshow","jquery.museoverlay","touchswipe","jquery.watch"],function(d){var $ = d;$(document).ready(function(){try{
+var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.musepolyfill.bgsize","jquery.watch","webpro","musewpslideshow","jquery.museoverlay","touchswipe"],function(d){var $ = d;$(document).ready(function(){try{
 window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
