--- a/sermon.html
+++ b/sermon.html
@@ -11,24 +11,24 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "jquery.watch.js", "jquery.scrolleffects.js", "require.js", "sermon.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "require.js", "jquery.scrolleffects.js", "sermon.css"], "outOfDate":[]};
 </script>
   
   <title>Sermon</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3866580668"/>
-  <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=147629848"/>
-  <link rel="stylesheet" type="text/css" href="css/sermon.css?crc=484049162" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=414985190"/>
+  <link rel="stylesheet" type="text/css" href="css/sermon.css?crc=4096456411" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/open-sans:n3:default;abel:n4:default.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/open-sans:n3,n4:default;abel:n4:default.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/UgVJLnEjqDkAoGSKZJY5X7rMjUuZiklREUOwmjfHAASfeCJgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFhzMsMMeMw6MKGHfFczMsMMeMb6MqGIQWmDZZMganRb3b9.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/9RsBg3NQh89aNlv7NghytugueQRug3W92WV0ztr1Qn9feCJgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFhzMsMMeMw6MKGHfFczMsMMeMb6MqGIQWmDZZMg1Nds3b9.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -50,18 +50,52 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
     <div class="popup_anchor" id="u5235popup">
      <div class="ContainerGroup clearfix" id="u5235"><!-- stack box -->
-      <div class="Container invi clearfix grpelem" id="u5236"><!-- column -->
-       <div class="clearfix colelem" id="u5240-3"><!-- content -->
+      <div class="Container invi clearfix grpelem" id="u5236"><!-- group -->
+       <div class="clearfix grpelem" id="u5240-3"><!-- content -->
         <p>&nbsp;</p>
        </div>
-       <a class="nonblock nontext clearfix colelem" id="u5237-4" href="bible-readings.html" data-href="page:U4021"><!-- content --><p id="u5237-2">READINGS</p></a>
-       <a class="nonblock nontext MuseLinkActive clearfix colelem" id="u5239-4" href="sermon.html" data-href="page:U5450"><!-- content --><p id="u5239-2">SERMONS</p></a>
-       <a class="nonblock nontext clearfix colelem" id="u5238-4" href="discipleship.html" data-href="page:U5578"><!-- content --><p id="u5238-2">DISCIPLESHIP</p></a>
-       <a class="nonblock nontext clearfix colelem" id="u5243-4" href="events.html" data-href="page:U5505"><!-- content --><p id="u5243-2">EVENTS</p></a>
-       <a class="nonblock nontext clearfix colelem" id="u5244-4" href="openlife.html" data-href="page:U5698"><!-- content --><p id="u5244-2">OPENLIFE</p></a>
-       <div class="clearfix colelem" id="pu5242"><!-- group -->
-        <a class="nonblock nontext grpelem" id="u5242" href="https://www.facebook.com/gawlerunitingchurch" target="_blank" title="Facebook"><!-- simple frame --></a>
-        <a class="nonblock nontext grpelem" id="u5241" href="mailto:office@gawleruniting.org.au" target="_blank" title="Email"><!-- simple frame --></a>
+       <a class="nonblock nontext clearfix grpelem" id="u5237-4" href="bible-readings.html" data-href="page:U4021"><!-- content --><p id="u5237-2">READINGS</p></a>
+       <a class="nonblock nontext clearfix grpelem" id="u5238-4" href="discipleship.html" data-href="page:U5578"><!-- content --><p id="u5238-2">DISCIPLESHIP</p></a>
+       <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u5239-4" href="sermon.html" data-href="page:U5450"><!-- content --><p id="u5239-2">SERMONS</p></a>
+       <a class="nonblock nontext grpelem" id="u5242" href="https://www.facebook.com/gawlerunitingchurch" target="_blank" title="Facebook"><!-- simple frame --></a>
+       <a class="nonblock nontext grpelem" id="u5241" href="mailto:office@gawleruniting.org.au" target="_blank" title="Email"><!-- simple frame --></a>
+       <a class="nonblock nontext clearfix grpelem" id="u5243-4" href="events.html" data-href="page:U5505"><!-- content --><p id="u5243-2">EVENTS</p></a>
+       <a class="nonblock nontext clearfix grpelem" id="u5244-4" href="openlife.html" data-href="page:U5698"><!-- content --><p id="u5244-2">OPENLIFE</p></a>
+       <div class="PamphletWidget clearfix grpelem" id="pamphletu6020"><!-- none box -->
+        <div class="ThumbGroup clearfix grpelem" id="u6025"><!-- none box -->
+         <div class="popup_anchor" id="u6026popup">
+          <div class="Thumb popup_element clearfix" id="u6026"><!-- column -->
+           <div class="colelem" id="u6029"><!-- simple frame --></div>
+           <div class="colelem" id="u6027"><!-- simple frame --></div>
+           <div class="colelem" id="u6028"><!-- simple frame --></div>
+          </div>
+         </div>
+        </div>
+        <div class="popup_anchor" id="u6030popup">
+         <div class="ContainerGroup clearfix" id="u6030"><!-- stack box -->
+          <div class="Container invi clearfix grpelem" id="u6031"><!-- column -->
+           <div class="clearfix colelem" id="u6041-3"><!-- content -->
+            <p>&nbsp;</p>
+           </div>
+           <a class="nonblock nontext clearfix colelem" id="u6040-4" href="bible-readings.html" data-href="page:U4021"><!-- content --><p id="u6040-2">READINGS</p></a>
+           <a class="nonblock nontext MuseLinkActive clearfix colelem" id="u6036-4" href="sermon.html" data-href="page:U5450"><!-- content --><p id="u6036-2">SERMONS</p></a>
+           <a class="nonblock nontext clearfix colelem" id="u6037-4" href="discipleship.html" data-href="page:U5578"><!-- content --><p id="u6037-2">DISCIPLESHIP</p></a>
+           <a class="nonblock nontext clearfix colelem" id="u6039-4" href="events.html" data-href="page:U5505"><!-- content --><p id="u6039-2">EVENTS</p></a>
+           <a class="nonblock nontext clearfix colelem" id="u6038-4" href="openlife.html" data-href="page:U5698"><!-- content --><p id="u6038-2">OPENLIFE</p></a>
+           <div class="clearfix colelem" id="pu6042"><!-- group -->
+            <a class="nonblock nontext clip_frame grpelem" id="u6042" href="http://gawleruniting.org.au"><!-- svg --><img class="svg" id="u6043" src="images/pasted-svg-109665x109.svg?crc=3939634654" width="60" height="60" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_.png?crc=4011030576"/></a>
+            <a class="nonblock nontext clip_frame grpelem" id="u6032" href="https://www.facebook.com/gawlerunitingchurch"><!-- svg --><img class="svg" id="u6033" src="images/pasted-svg-109665x1092.svg?crc=223350899" width="60" height="60" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_2.png?crc=4111301327"/></a>
+            <a class="nonblock nontext clip_frame grpelem" id="u6034" href="tel:(08)85225269"><!-- svg --><img class="svg" id="u6035" src="images/pasted-svg-109665x1093.svg?crc=4186153669" width="60" height="60" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_3.png?crc=4204566227"/></a>
+           </div>
+          </div>
+         </div>
+        </div>
+        <div class="popup_anchor" id="u6022popup">
+         <div class="PamphletCloseButton PamphletLightboxPart popup_element clearfix" id="u6022"><!-- group -->
+          <div class="grpelem" id="u6024" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0.7071,M12=0.7071,M21=-0.7071,M22=0.7071,SizingMethod='auto expand')" data-mu-ie-matrix-dx="3" data-mu-ie-matrix-dy="-9"><!-- simple frame --></div>
+          <div class="grpelem" id="u6023" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0.7071,M12=-0.7071,M21=0.7071,M22=0.7071,SizingMethod='auto expand')" data-mu-ie-matrix-dx="3" data-mu-ie-matrix-dy="-9"><!-- simple frame --></div>
+         </div>
+        </div>
        </div>
       </div>
      </div>
@@ -79,7 +113,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <h1>Sermons</h1>
    </div>
    <!-- /m_editable -->
-   <div class="colelem" id="u5429"><!-- simple frame --></div>
+   <div class="clearfix colelem" id="pu6188"><!-- group -->
+    <div class="grpelem" id="u6188"><!-- simple frame --></div>
+    <div class="grpelem" id="u5429"><!-- simple frame --></div>
+   </div>
    <!-- m_editable region-id="editable-static-tag-U5430-BP_infinity" template="sermon.html" data-type="html" data-ice-options="disableImageResize,link" -->
    <div class="clearfix colelem" id="u5430-4" data-muse-uid="U5430" data-muse-type="txt_frame"><!-- content -->
     <p>Recent sermons from the 5pm service</p>
@@ -115,6 +152,7 @@ window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
+Muse.Utils.initWidget('#pamphletu6020', ['#bp_infinity'], function(elem) { return new WebPro.Widget.ContentSlideShow(elem, {contentLayout_runtime:'stack',event:'click',deactivationEvent:'mouseout_both',autoPlay:false,displayInterval:3000,transitionStyle:'fading',transitionDuration:500,hideAllContentsFirst:true,shuffle:false,enableSwipe:true,resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false}); });/* #pamphletu6020 */
 Muse.Utils.initWidget('#pamphletu5224', ['#bp_infinity'], function(elem) { return new WebPro.Widget.ContentSlideShow(elem, {contentLayout_runtime:'stack',event:'click',deactivationEvent:'mouseout_both',autoPlay:false,displayInterval:3000,transitionStyle:'fading',transitionDuration:500,hideAllContentsFirst:true,shuffle:false,enableSwipe:true,resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false}); });/* #pamphletu5224 */
 $('#pamphletu5224').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0.1]},{"speed":[0,0],"in":[0.1,Infinity]}]);/* scroll effect */
 Muse.Utils.showWidgetsWhenReady();/* body */
