--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Home Page</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3866580668"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=440678596" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=3761856396" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
@@ -27,7 +27,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/open-sans:n4:default.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/S83VibPfIFuaIV6cc37ZgYX8_RtHTvlyBCtm0CwO8fwfenjgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAukSku8jWZ8SkGHfwQpMsMMeMb6MqGIQWmDZZMg1Fds3b9.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/hbfA2Y3ae08Bj0qFhM6OJMwjktKl9_JzVu7UXOtSugwfenjgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAukSku8jWZ8SkGHfwQpMsMMeMb6MqGIQWmDZZMgN0_s3b9.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -78,8 +78,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
           <p>&nbsp;</p>
          </div>
          <!-- /m_editable -->
-         <!-- m_editable region-id="editable-static-tag-U5720-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-         <a class="nonblock nontext clearfix colelem" id="u5720-4" href="bible-readings.html" data-href="page:U4021" data-muse-uid="U5720" data-muse-type="txt_frame"><!-- content --><p id="u5720-2">READINGS</p></a>
+         <!-- m_editable region-id="editable-static-tag-U5720-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link" -->
+         <div class="clearfix colelem" id="u5720-4" data-muse-uid="U5720" data-muse-type="txt_frame"><!-- content -->
+          <p id="u5720-2">READINGS</p>
+         </div>
          <!-- /m_editable -->
          <!-- m_editable region-id="editable-static-tag-U5716-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
          <a class="nonblock nontext clearfix colelem" id="u5716-4" href="sermon.html" data-href="page:U5450" data-muse-uid="U5716" data-muse-type="txt_frame"><!-- content --><p id="u5716-2">SERMONS</p></a>
@@ -121,7 +123,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <h1>Becoming all God created you to be</h1>
    </div>
    <!-- /m_editable -->
-   <div class="verticalspacer" data-offset-top="718" data-content-above-spacer="718" data-content-below-spacer="0"></div>
+   <div class="verticalspacer" data-offset-top="71" data-content-above-spacer="718" data-content-below-spacer="647"></div>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
