--- a/bible-readings.html
+++ b/bible-readings.html
@@ -11,14 +11,18 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musepolyfill.bgsize.js", "jquery.watch.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "require.js", "bible-readings.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "require.js", "bible-readings.css"], "outOfDate":[]};
 </script>
   
   <title>Bible Readings</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3866580668"/>
-  <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=414985190"/>
-  <link rel="stylesheet" type="text/css" href="css/bible-readings.css?crc=4124046276" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=209653806"/>
+  <link rel="stylesheet" type="text/css" href="css/bible-readings.css?crc=4112769025" id="pagesheet"/>
+  <!-- IE-only CSS -->
+  <!--[if lt IE 9]>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_master.css?crc=3824530138" id="nomq_pagesheet"/>
+  <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
@@ -28,7 +32,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/open-sans:n4,n3:default;abel:n4:default.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/xcf9oxMGTx3wDgYL-Wj3zTIKlHVrjdlhKOmRjaMay0bfeCJgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFczMsMMeMb6MKGHfFhzMsMMeMw6MqGIQWmDZZMg1lds3b9.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/94U_M5SjT3-uxwioSvsqotbrW4t4wHbGGxsqDwcp_mIfeCJgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFczMsMMeMb6MKGHfFhzMsMMeMw6MqGIQWmDZZMgxr_s3b9.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -38,7 +42,40 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
  <body>
 
   <div class="clearfix borderbox" id="page"><!-- group -->
-   <div class="PamphletWidget clearfix mse_pre_init" id="pamphletu5224"><!-- none box -->
+   <!-- m_editable region-id="editable-static-tag-U7251-BP_infinity" template="bible-readings.html" data-type="html" data-ice-options="disableImageResize,link" -->
+   <div class="Title clearfix grpelem" id="u7251-4" data-muse-uid="U7251" data-muse-type="txt_frame"><!-- content -->
+    <h1>Bible Readings</h1>
+   </div>
+   <!-- /m_editable -->
+   <div class="clearfix grpelem" id="u7247"><!-- column -->
+    <!-- m_editable region-id="editable-static-tag-U7250-BP_infinity" template="bible-readings.html" data-type="html" data-ice-options="disableImageResize,link" -->
+    <div class="clearfix colelem" id="u7250-27" data-muse-uid="U7250" data-muse-type="txt_frame"><!-- content -->
+     <p id="u7250-2">8To conclude: you must all have the same attitude and the same feelings; love one another as brothers and sisters, and be kind and humble with one another. 9Do not pay back evil with evil or cursing with cursing; instead, pay back with a blessing, because a blessing is what God promised to give you when he called you. 10As the scripture says:</p>
+     <p id="u7250-4">“Whoever wants to enjoy life</p>
+     <p id="u7250-6">and wishes to see good times,</p>
+     <p id="u7250-8">must keep from speaking evil</p>
+     <p id="u7250-10">and stop telling lies.</p>
+     <p id="u7250-12">11They must turn away from evil and do good;</p>
+     <p id="u7250-14">they must strive for peace with all their heart.</p>
+     <p id="u7250-16">12For the Lord watches over the righteous</p>
+     <p id="u7250-18">and listens to their prayers;</p>
+     <p id="u7250-20">but he opposes those who do evil.”</p>
+     <p id="u7250-22">13Who will harm you if you are eager to do what is good? 14But even if you should suffer for doing what is right, how happy you are! Do not be afraid of anyone, and do not worry. 15But have reverence for Christ in your hearts, and honour him as Lord. Be ready at all times to answer anyone who asks you to explain the hope you have in you, 16but do it with gentleness and respect. Keep your conscience clear, so that when you are insulted, those who speak evil of your good conduct as followers of Christ will be ashamed of what they say. 17For it is better to suffer for doing good, if this should be God's will, than for doing evil. 18For Christ died for sins once and for all, a good man on behalf of sinners, in order to lead you to God. He was put to death physically, but made alive spiritually, 19and in his spiritual existence he went and preached to the imprisoned spirits. 20These were the spirits of those who had not obeyed God when he waited patiently during the days that Noah was building his boat. The few people in the boat — eight in all — were saved by the water, 21which was a symbol pointing to baptism, which now saves you. It is not the washing away of bodily dirt, but the promise made to God from a good conscience. It saves you through the resurrection of Jesus Christ, 22who has gone to heaven and is at the right-hand side of God, ruling over all angels and heavenly authorities and powers.</p>
+     <p id="u7250-23">&nbsp;</p>
+     <p id="u7250-25">1 Peter 3:8-22</p>
+    </div>
+    <!-- /m_editable -->
+    <!-- m_editable region-id="editable-static-tag-U7248-BP_infinity" template="bible-readings.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+    <a class="nonblock nontext clearfix colelem" id="u7248-4" href="https://www.bible.com/bible/68/1pe.3" data-muse-uid="U7248" data-muse-type="txt_frame"><!-- content --><p><span id="u7248">View online</span></p></a>
+    <!-- /m_editable -->
+    <!-- m_editable region-id="editable-static-tag-U7249-BP_infinity" template="bible-readings.html" data-type="html" data-ice-options="disableImageResize,link" -->
+    <div class="clearfix colelem" id="u7249-4" data-muse-uid="U7249" data-muse-type="txt_frame"><!-- content -->
+     <p><span id="u7249">This weeks passage</span></p>
+    </div>
+    <!-- /m_editable -->
+   </div>
+   <a class="anchor_item grpelem" id="top"></a>
+   <div class="PamphletWidget clearfix grpelem" id="pamphletu5224"><!-- none box -->
     <div class="ThumbGroup clearfix grpelem" id="u5230"><!-- none box -->
      <div class="popup_anchor" id="u5231popup">
       <div class="Thumb popup_element clearfix" id="u5231"><!-- column -->
@@ -64,10 +101,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         <div class="popup_anchor" id="u6030popup">
          <div class="ContainerGroup clearfix" id="u6030"><!-- stack box -->
           <div class="Container invi clearfix grpelem" id="u6031"><!-- column -->
-           <div class="museBGSize clearfix colelem" id="u6041-3"><!-- content -->
+           <div class="clearfix colelem" id="u6041-3"><!-- content -->
             <p>&nbsp;</p>
            </div>
-           <a class="nonblock nontext MuseLinkActive clearfix colelem" id="u6040-4" href="bible-readings.html" data-href="page:U4021"><!-- content --><p id="u6040-2">READINGS</p></a>
+           <div class="clearfix colelem" id="u6040-4"><!-- content -->
+            <p id="u6040-2">READINGS</p>
+           </div>
            <a class="nonblock nontext clearfix colelem" id="u6036-4" href="sermon.html" data-href="page:U5450"><!-- content --><p id="u6036-2">SERMONS</p></a>
            <a class="nonblock nontext clearfix colelem" id="u6037-4" href="discipleship.html" data-href="page:U5578"><!-- content --><p id="u6037-2">DISCIPLESHIP</p></a>
            <a class="nonblock nontext clearfix colelem" id="u6039-4" href="events.html" data-href="page:U5505"><!-- content --><p id="u6039-2">EVENTS</p></a>
@@ -87,18 +126,20 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          </div>
         </div>
        </div>
-       <div class="museBGSize clearfix grpelem" id="u5240-3"><!-- content -->
+       <div class="clearfix grpelem" id="u5240-3"><!-- content -->
         <p>&nbsp;</p>
        </div>
-       <a class="nonblock nontext museBGSize grpelem" id="u5242" href="https://www.facebook.com/gawlerunitingchurch" target="_blank" title="Facebook"><!-- simple frame --></a>
+       <a class="nonblock nontext grpelem" id="u5242" href="https://www.facebook.com/gawlerunitingchurch" target="_blank" title="Facebook"><!-- simple frame --></a>
        <div class="clearfix grpelem" id="pu5237-4"><!-- column -->
-        <a class="nonblock nontext MuseLinkActive clearfix colelem" id="u5237-4" href="bible-readings.html" data-href="page:U4021"><!-- content --><p id="u5237-2">READINGS</p></a>
+        <div class="clearfix colelem" id="u5237-4"><!-- content -->
+         <p id="u5237-2">READINGS</p>
+        </div>
         <a class="nonblock nontext clearfix colelem" id="u5239-4" href="sermon.html" data-href="page:U5450"><!-- content --><p id="u5239-2">SERMONS</p></a>
         <a class="nonblock nontext clearfix colelem" id="u5238-4" href="discipleship.html" data-href="page:U5578"><!-- content --><p id="u5238-2">DISCIPLESHIP</p></a>
         <a class="nonblock nontext clearfix colelem" id="u5243-4" href="events.html" data-href="page:U5505"><!-- content --><p id="u5243-2">EVENTS</p></a>
         <a class="nonblock nontext clearfix colelem" id="u5244-4" href="openlife.html" data-href="page:U5698"><!-- content --><p id="u5244-2">OPENLIFE</p></a>
        </div>
-       <a class="nonblock nontext museBGSize grpelem" id="u5241" href="mailto:office@gawleruniting.org.au" target="_blank" title="Email"><!-- simple frame --></a>
+       <a class="nonblock nontext grpelem" id="u5241" href="mailto:office@gawleruniting.org.au" target="_blank" title="Email"><!-- simple frame --></a>
       </div>
      </div>
     </div>
@@ -109,42 +150,14 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
    </div>
-   <!-- m_editable region-id="editable-static-tag-U3995-BP_infinity" template="bible-readings.html" data-type="html" data-ice-options="disableImageResize,link" -->
-   <div class="Title clearfix grpelem" id="u3995-4" data-muse-uid="U3995" data-muse-type="txt_frame"><!-- content -->
-    <h1>Bible Readings</h1>
+   <!-- m_editable region-id="editable-static-tag-U7246-BP_infinity" template="bible-readings.html" data-type="html" data-ice-options="disableImageResize,link" -->
+   <div class="clearfix grpelem" id="u7246-4" data-muse-uid="U7246" data-muse-type="txt_frame"><!-- content -->
+    <p>Last weeks passage</p>
    </div>
    <!-- /m_editable -->
-   <div class="clearfix grpelem" id="pu4052-4"><!-- column -->
-    <!-- m_editable region-id="editable-static-tag-U4052-BP_infinity" template="bible-readings.html" data-type="html" data-ice-options="disableImageResize,link" -->
-    <div class="clearfix colelem" id="u4052-4" data-muse-uid="U4052" data-muse-type="txt_frame"><!-- content -->
-     <p>This weeks passage</p>
-    </div>
-    <!-- /m_editable -->
-    <!-- m_editable region-id="editable-static-tag-U5125-BP_infinity" template="bible-readings.html" data-type="html" data-ice-options="disableImageResize,link" -->
-    <div class="clearfix colelem" id="u5125-13" data-muse-uid="U5125" data-muse-type="txt_frame"><!-- content -->
-     <p id="u5125-2">23After a severe beating, they were thrown into jail, and the jailer was ordered to lock them up tight. 24Upon receiving this order, the jailer threw them into the inner cell and fastened their feet between heavy blocks of wood.</p>
-     <p id="u5125-4">25About midnight Paul and Silas were praying and singing hymns to God, and the other prisoners were listening to them. 26Suddenly there was a violent earthquake, which shook the prison to its foundations. At once all the doors opened, and the chains fell off all the prisoners. 27The jailer woke up, and when he saw the prison doors open, he thought that the prisoners had escaped; so he pulled out his sword and was about to kill himself. 28But Paul shouted at the top of his voice, “Don't harm yourself! We are all here!”</p>
-     <p id="u5125-6">29The jailer called for a light, rushed in, and fell trembling at the feet of Paul and Silas. 30Then he led them out and asked, “Sirs, what must I do to be saved?”</p>
-     <p id="u5125-8">31They answered, “Believe in the Lord Jesus, and you will be saved — you and your family.” 32Then they preached the word of the Lord to him and to all the others in his house. 33At that very hour of the night the jailer took them and washed their wounds; and he and all his family were baptized at once. 34Then he took Paul and Silas up into his house and gave them some food to eat. He and his family were filled with joy, because they now believed in God.</p>
-     <p id="u5125-9">&nbsp;</p>
-     <p id="u5125-11">Acts 16:23-34</p>
-    </div>
-    <!-- /m_editable -->
-    <!-- m_editable region-id="editable-static-tag-U5810-BP_infinity" template="bible-readings.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-    <a class="nonblock nontext clearfix colelem" id="u5810-4" href="https://www.bible.com/bible/296/act.16" data-muse-uid="U5810" data-muse-type="txt_frame"><!-- content --><p><span id="u5810">View online</span></p></a>
-    <!-- /m_editable -->
-    <!-- m_editable region-id="editable-static-tag-U5771-BP_infinity" template="bible-readings.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-    <a class="nonblock nontext clearfix colelem" id="u5771-4" href="last-weeks-br.html" data-href="page:U5809" data-muse-uid="U5771" data-muse-type="txt_frame"><!-- content --><p><span id="u5771">Last weeks passage</span></p></a>
-    <!-- /m_editable -->
-   </div>
    <div class="grpelem" id="u6188"><!-- simple frame --></div>
-   <a class="anchor_item grpelem" id="top"></a>
-   <div class="verticalspacer" data-offset-top="700" data-content-above-spacer="700" data-content-below-spacer="81"></div>
-   <a class="nonblock nontext rounded-corners clearfix grpelem" id="u5290-4" href="index.html#top" data-href="anchor:U775:U1260"><!-- content --><p id="u5290-2">RETURN HOME</p></a>
-  </div>
-  <div class="preload_images">
-   <img class="preload" src="images/fbvector-colour.png?crc=3931600933" alt=""/>
-   <img class="preload" src="images/%40vectorwhite-colour.png?crc=110840769" alt=""/>
+   <div class="verticalspacer" data-offset-top="602" data-content-above-spacer="602" data-content-below-spacer="81"></div>
+   <a class="nonblock nontext clearfix grpelem" id="u5290-4" href="index.html#top" data-href="anchor:U775:U1260"><!-- content --><p id="u5290-2">RETURN HOME</p></a>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -152,7 +165,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 16);return 0},g=function(g){for(var f=document.getElementsByTagName("link"),h=0;h<f.length;h++)if("text/css"==f[h].type){var i=(f[h].href||"").match(/\/?css\/([\w\-]+\.css)\?crc=(\d+)/);if(!i||!i[1]||!i[2])break;b[i[1]]=i[2]}f=document.createElement("div");f.className="version";f.style.cssText="display:none; width:1px; height:1px;";document.getElementsByTagName("body")[0].appendChild(f);for(h=0;h<Muse.assets.required.length;){var i=Muse.assets.required[h],l=i.match(/([\w\-\.]+)\.(\w+)$/),k=l&&l[1]?
 l[1]:null,l=l&&l[2]?l[2]:null;switch(l.toLowerCase()){case "css":k=k.replace(/\W/gi,"_").replace(/^([^a-z])/gi,"_$1");f.className+=" "+k;k=a(c(f,"color"));l=a(c(f,"backgroundColor"));k!=0||l!=0?(Muse.assets.required.splice(h,1),"undefined"!=typeof b[i]&&(k!=b[i]>>>24||l!=(b[i]&16777215))&&Muse.assets.outOfDate.push(i)):h++;f.className="version";break;case "js":h++;break;default:throw Error("Unsupported file type: "+l);}}d?d().jquery!="1.8.3"&&Muse.assets.outOfDate.push("jquery-1.8.3.min.js"):Muse.assets.required.push("jquery-1.8.3.min.js");
 f.parentNode.removeChild(f);if(Muse.assets.outOfDate.length||Muse.assets.required.length)f="Some files on the server may be missing or incorrect. Clear browser cache and try again. If the problem persists please contact website author.",g&&Muse.assets.outOfDate.length&&(f+="\nOut of date: "+Muse.assets.outOfDate.join(",")),g&&Muse.assets.required.length&&(f+="\nMissing: "+Muse.assets.required.join(",")),alert(f)};location&&location.search&&location.search.match&&location.search.match(/muse_debug/gi)?setTimeout(function(){g(!0)},5E3):g()}};
-var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.musepolyfill.bgsize","webpro","musewpslideshow","jquery.museoverlay","touchswipe","jquery.watch"],function(d){var $ = d;$(document).ready(function(){try{
+var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","webpro","musewpslideshow","jquery.museoverlay","touchswipe","jquery.watch"],function(d){var $ = d;$(document).ready(function(){try{
 window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
