--- a/discipleship.html
+++ b/discipleship.html
@@ -17,8 +17,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Discipleship</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3866580668"/>
-  <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=209653806"/>
-  <link rel="stylesheet" type="text/css" href="css/discipleship.css?crc=358485137" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=3953320884"/>
+  <link rel="stylesheet" type="text/css" href="css/discipleship.css?crc=357128339" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_master.css?crc=3824530138" id="nomq_pagesheet"/>
@@ -32,7 +32,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/open-sans:n3,n4:default;abel:n4:default.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/1CHnMcUJxHotgPXRK1TMiQo4tBUXaEtga_cFn2spqw9fenjgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFhzMsMMeMw6MqGIQWmDZZMgrr_s3b9.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/h1eIHsa_MDRJM19fJbnD9Wm7KXvVfDy5vJf0N1v12FXfenjgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFhzMsMMeMw6MqGIQWmDZZMgCzOs3b9.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -41,8 +41,38 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    </head>
  <body>
 
-  <div class="clearfix" id="page"><!-- column -->
-   <div class="clearfix colelem" id="ppamphletu5224"><!-- group -->
+  <div class="clearfix" id="page"><!-- group -->
+   <div class="clearfix grpelem" id="pu6188"><!-- group -->
+    <div class="grpelem" id="u6188"><!-- simple frame --></div>
+    <!-- m_editable region-id="editable-static-tag-U5546-BP_infinity" template="discipleship.html" data-type="html" data-ice-options="disableImageResize,link" -->
+    <div class="Title clearfix grpelem" id="u5546-4" data-muse-uid="U5546" data-muse-type="txt_frame"><!-- content -->
+     <h1>DISCIPLESHIP PATHWAYS</h1>
+    </div>
+    <!-- /m_editable -->
+    <div class="grpelem" id="u5547"><!-- simple frame --></div>
+    <div class="clearfix grpelem" id="u5652"><!-- column -->
+     <!-- m_editable region-id="editable-static-tag-U5585-BP_infinity" template="discipleship.html" data-type="html" data-ice-options="disableImageResize,link" -->
+     <div class="rounded-corners clearfix colelem" id="u5585-4" data-muse-uid="U5585" data-muse-type="txt_frame"><!-- content -->
+      <p>Link to resource/videos/group</p>
+     </div>
+     <!-- /m_editable -->
+     <div class="clip_frame colelem" id="u5621"><!-- svg -->
+      <img class="svg" id="u5619" src="images/pasted-svg-88051x95.svg?crc=3780756753" width="75" height="82" alt="" data-mu-svgfallback="images/pasted%20svg%2088051x95_poster_.png?crc=151954931"/>
+     </div>
+     <!-- m_editable region-id="editable-static-tag-U5628-BP_infinity" template="discipleship.html" data-type="html" data-ice-options="disableImageResize,link" -->
+     <div class="rounded-corners clearfix colelem" id="u5628-4" data-muse-uid="U5628" data-muse-type="txt_frame"><!-- content -->
+      <p>Link to resource/videos/group</p>
+     </div>
+     <!-- /m_editable -->
+     <div class="clip_frame colelem" id="u5629"><!-- svg -->
+      <img class="svg" id="u5630" src="images/pasted-svg-88051x95.svg?crc=3780756753" width="75" height="82" alt="" data-mu-svgfallback="images/pasted%20svg%2088051x95_poster_.png?crc=151954931"/>
+     </div>
+     <!-- m_editable region-id="editable-static-tag-U5640-BP_infinity" template="discipleship.html" data-type="html" data-ice-options="disableImageResize,link" -->
+     <div class="rounded-corners clearfix colelem" id="u5640-4" data-muse-uid="U5640" data-muse-type="txt_frame"><!-- content -->
+      <p>Link to resource/videos/group</p>
+     </div>
+     <!-- /m_editable -->
+    </div>
     <div class="PamphletWidget clearfix grpelem" id="pamphletu5224"><!-- none box -->
      <div class="ThumbGroup clearfix grpelem" id="u5230"><!-- none box -->
       <div class="popup_anchor" id="u5231popup">
@@ -84,9 +114,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
             <div class="clearfix colelem" id="u6041-3"><!-- content -->
              <p>&nbsp;</p>
             </div>
-            <div class="clearfix colelem" id="u6040-4"><!-- content -->
-             <p id="u6040-2">READINGS</p>
-            </div>
+            <a class="nonblock nontext clearfix colelem" id="u6040-4" href="bible-readings.html" data-href="page:U7278"><!-- content --><p id="u6040-2">READINGS</p></a>
             <a class="nonblock nontext clearfix colelem" id="u6036-4" href="sermon.html" data-href="page:U5450"><!-- content --><p id="u6036-2">SERMONS</p></a>
             <a class="nonblock nontext MuseLinkActive clearfix colelem" id="u6037-4" href="discipleship.html" data-href="page:U5578"><!-- content --><p id="u6037-2">DISCIPLESHIP</p></a>
             <a class="nonblock nontext clearfix colelem" id="u6039-4" href="events.html" data-href="page:U5505"><!-- content --><p id="u6039-2">EVENTS</p></a>
@@ -118,40 +146,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
     <a class="anchor_item grpelem" id="top"></a>
    </div>
-   <div class="clearfix colelem" id="pu6188"><!-- group -->
-    <div class="grpelem" id="u6188"><!-- simple frame --></div>
-    <!-- m_editable region-id="editable-static-tag-U5546-BP_infinity" template="discipleship.html" data-type="html" data-ice-options="disableImageResize,link" -->
-    <div class="Title clearfix grpelem" id="u5546-4" data-muse-uid="U5546" data-muse-type="txt_frame"><!-- content -->
-     <h1>DISCIPLESHIP PATHWAYS</h1>
-    </div>
-    <!-- /m_editable -->
-   </div>
-   <div class="colelem" id="u5547"><!-- simple frame --></div>
-   <div class="clearfix colelem" id="u5652"><!-- column -->
-    <!-- m_editable region-id="editable-static-tag-U5585-BP_infinity" template="discipleship.html" data-type="html" data-ice-options="disableImageResize,link" -->
-    <div class="rounded-corners clearfix colelem" id="u5585-4" data-muse-uid="U5585" data-muse-type="txt_frame"><!-- content -->
-     <p>Link to resource/videos/group</p>
-    </div>
-    <!-- /m_editable -->
-    <div class="clip_frame colelem" id="u5621"><!-- svg -->
-     <img class="svg" id="u5619" src="images/pasted-svg-88051x95.svg?crc=3780756753" width="75" height="82" alt="" data-mu-svgfallback="images/pasted%20svg%2088051x95_poster_.png?crc=151954931"/>
-    </div>
-    <!-- m_editable region-id="editable-static-tag-U5628-BP_infinity" template="discipleship.html" data-type="html" data-ice-options="disableImageResize,link" -->
-    <div class="rounded-corners clearfix colelem" id="u5628-4" data-muse-uid="U5628" data-muse-type="txt_frame"><!-- content -->
-     <p>Link to resource/videos/group</p>
-    </div>
-    <!-- /m_editable -->
-    <div class="clip_frame colelem" id="u5629"><!-- svg -->
-     <img class="svg" id="u5630" src="images/pasted-svg-88051x95.svg?crc=3780756753" width="75" height="82" alt="" data-mu-svgfallback="images/pasted%20svg%2088051x95_poster_.png?crc=151954931"/>
-    </div>
-    <!-- m_editable region-id="editable-static-tag-U5640-BP_infinity" template="discipleship.html" data-type="html" data-ice-options="disableImageResize,link" -->
-    <div class="rounded-corners clearfix colelem" id="u5640-4" data-muse-uid="U5640" data-muse-type="txt_frame"><!-- content -->
-     <p>Link to resource/videos/group</p>
-    </div>
-    <!-- /m_editable -->
-   </div>
-   <div class="verticalspacer" data-offset-top="520" data-content-above-spacer="519" data-content-below-spacer="81"></div>
-   <a class="nonblock nontext clearfix colelem" id="u5290-4" href="index.html#top" data-href="anchor:U775:U1260"><!-- content --><p id="u5290-2">RETURN HOME</p></a>
+   <div class="verticalspacer" data-offset-top="520" data-content-above-spacer="535" data-content-below-spacer="80"></div>
+   <a class="nonblock nontext clearfix grpelem" id="u5290-4" href="index.html#top" data-href="anchor:U775:U1260"><!-- content --><p id="u5290-2">RETURN HOME</p></a>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
