--- a/openlife.html
+++ b/openlife.html
@@ -17,8 +17,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>OpenLife</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3866580668"/>
-  <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=209653806"/>
-  <link rel="stylesheet" type="text/css" href="css/openlife.css?crc=330494788" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=3953320884"/>
+  <link rel="stylesheet" type="text/css" href="css/openlife.css?crc=333523177" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_master.css?crc=3824530138" id="nomq_pagesheet"/>
@@ -32,7 +32,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/open-sans:n3,n4:default;abel:n4:default.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/YBo2xD1aGSBRquid_VofdkE6ENhVIYW77NPl4prmuSIfenjgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFhzMsMMeMw6MqGIQWmDZZMgxp_s3b9.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/6778RHUm7IhE-W3BoMRO9-83VPDBUCKGaeR1VjNoAUIfenjgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFhzMsMMeMw6MqGIQWmDZZMgCxOs3b9.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -41,8 +41,15 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    </head>
  <body>
 
-  <div class="clearfix" id="page"><!-- column -->
-   <div class="clearfix colelem" id="ppamphletu5224"><!-- group -->
+  <div class="clearfix" id="page"><!-- group -->
+   <div class="clearfix grpelem" id="pu6188"><!-- group -->
+    <div class="grpelem" id="u6188"><!-- simple frame --></div>
+    <!-- m_editable region-id="editable-static-tag-U5666-BP_infinity" template="openlife.html" data-type="html" data-ice-options="disableImageResize,link" -->
+    <div class="Title clearfix grpelem" id="u5666-4" data-muse-uid="U5666" data-muse-type="txt_frame"><!-- content -->
+     <h1>OpenLife Groups</h1>
+    </div>
+    <!-- /m_editable -->
+    <div class="grpelem" id="u5667"><!-- simple frame --></div>
     <div class="PamphletWidget clearfix grpelem" id="pamphletu5224"><!-- none box -->
      <div class="ThumbGroup clearfix grpelem" id="u5230"><!-- none box -->
       <div class="popup_anchor" id="u5231popup">
@@ -84,9 +91,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
             <div class="clearfix colelem" id="u6041-3"><!-- content -->
              <p>&nbsp;</p>
             </div>
-            <div class="clearfix colelem" id="u6040-4"><!-- content -->
-             <p id="u6040-2">READINGS</p>
-            </div>
+            <a class="nonblock nontext clearfix colelem" id="u6040-4" href="bible-readings.html" data-href="page:U7278"><!-- content --><p id="u6040-2">READINGS</p></a>
             <a class="nonblock nontext clearfix colelem" id="u6036-4" href="sermon.html" data-href="page:U5450"><!-- content --><p id="u6036-2">SERMONS</p></a>
             <a class="nonblock nontext clearfix colelem" id="u6037-4" href="discipleship.html" data-href="page:U5578"><!-- content --><p id="u6037-2">DISCIPLESHIP</p></a>
             <a class="nonblock nontext clearfix colelem" id="u6039-4" href="events.html" data-href="page:U5505"><!-- content --><p id="u6039-2">EVENTS</p></a>
@@ -118,17 +123,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
     <a class="anchor_item grpelem" id="top"></a>
    </div>
-   <!-- m_editable region-id="editable-static-tag-U5666-BP_infinity" template="openlife.html" data-type="html" data-ice-options="disableImageResize,link" -->
-   <div class="Title clearfix colelem" id="u5666-4" data-muse-uid="U5666" data-muse-type="txt_frame"><!-- content -->
-    <h1>OpenLife Groups</h1>
-   </div>
-   <!-- /m_editable -->
-   <div class="clearfix colelem" id="pu6188"><!-- group -->
-    <div class="grpelem" id="u6188"><!-- simple frame --></div>
-    <div class="grpelem" id="u5667"><!-- simple frame --></div>
-   </div>
-   <div class="verticalspacer" data-offset-top="96" data-content-above-spacer="95" data-content-below-spacer="611"></div>
-   <a class="nonblock nontext clearfix colelem" id="u5290-4" href="index.html#top" data-href="anchor:U775:U1260"><!-- content --><p id="u5290-2">RETURN HOME</p></a>
+   <div class="verticalspacer" data-offset-top="96" data-content-above-spacer="535" data-content-below-spacer="81"></div>
+   <a class="nonblock nontext clearfix grpelem" id="u5290-4" href="index.html#top" data-href="anchor:U775:U1260"><!-- content --><p id="u5290-2">RETURN HOME</p></a>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
