--- a/events.html
+++ b/events.html
@@ -17,12 +17,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Events</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3866580668"/>
-  <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=209653806"/>
-  <link rel="stylesheet" type="text/css" href="css/events.css?crc=3889987012" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=3953320884"/>
+  <link rel="stylesheet" type="text/css" href="css/events.css?crc=224494125" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_master.css?crc=3824530138"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_events.css?crc=4196278501" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_events.css?crc=467419337" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -33,7 +33,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/open-sans:n4,n3:default;abel:n4:default.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/qkzZkMKvyh_Y2gZSQpOXVimbmPKlJXqpAb8PUxf2C_XfenjgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFczMsMMeMb6MqGIQWmDZZMgr0_s3b9.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/wagZi6mwx9LGqOvBIf03JWrCrH8Bhcxys3RAckK7c4GfenjgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFczMsMMeMb6MqGIQWmDZZMgCLOs3b9.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -87,9 +87,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
             <div class="museBGSize clearfix colelem shared_content" id="u6041-3" data-content-guid="u6041-3_content"><!-- content -->
              <p>&nbsp;</p>
             </div>
-            <div class="clearfix colelem shared_content" id="u6040-4" data-content-guid="u6040-4_content"><!-- content -->
-             <p id="u6040-2">READINGS</p>
-            </div>
+            <a class="nonblock nontext clearfix colelem shared_content" id="u6040-4" href="bible-readings.html" data-href="page:U7278" data-content-guid="u6040-4_content"><!-- content --><p id="u6040-2">READINGS</p></a>
             <a class="nonblock nontext clearfix colelem shared_content" id="u6036-4" href="sermon.html" data-href="page:U5450" data-content-guid="u6036-4_content"><!-- content --><p id="u6036-2">SERMONS</p></a>
             <a class="nonblock nontext clearfix colelem shared_content" id="u6037-4" href="discipleship.html" data-href="page:U5578" data-content-guid="u6037-4_content"><!-- content --><p id="u6037-2">DISCIPLESHIP</p></a>
             <a class="nonblock nontext MuseLinkActive clearfix colelem shared_content" id="u6039-4" href="events.html" data-href="page:U5505" data-content-guid="u6039-4_content"><!-- content --><p id="u6039-2">EVENTS</p></a>
@@ -134,7 +132,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
     <div class="grpelem shared_content" id="u6188" data-content-guid="u6188_content"><!-- simple frame --></div>
-    <div class="verticalspacer" data-offset-top="484" data-content-above-spacer="484" data-content-below-spacer="80"></div>
+    <div class="verticalspacer" data-offset-top="484" data-content-above-spacer="535" data-content-below-spacer="80"></div>
     <a class="nonblock nontext rounded-corners clearfix grpelem shared_content" id="u5290-4" href="index.html#top" data-href="anchor:U775:U1260" data-content-guid="u5290-4_content"><!-- content --><p id="u5290-2">RETURN HOME</p></a>
    </div>
    <div class="preload_images">
@@ -144,79 +142,77 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   </div>
   <div class="breakpoint" id="bp_380" data-max-width="380"><!-- responsive breakpoint node -->
    <div class="clearfix borderbox temp_no_id" data-orig-id="page"><!-- group -->
-    <div class="clearfix grpelem" id="ppu5482-4"><!-- column -->
-     <div class="clearfix colelem temp_no_id" data-orig-id="pu5482-4"><!-- group -->
-      <!-- m_editable region-id="editable-static-tag-U5482-BP_380" template="events.html" data-type="html" data-ice-options="disableImageResize,link" -->
-      <span class="Title clearfix grpelem placeholder" data-placeholder-for="u5482-4_content"><!-- placeholder node --></span>
-      <!-- /m_editable -->
-      <div class="PamphletWidget clearfix grpelem temp_no_id" data-orig-id="pamphletu5224"><!-- none box -->
-       <div class="ThumbGroup clearfix grpelem temp_no_id" data-orig-id="u5230"><!-- none box -->
-        <div class="popup_anchor temp_no_id" data-orig-id="u5231popup">
-         <div class="Thumb popup_element clearfix temp_no_id" data-orig-id="u5231"><!-- column -->
-          <span class="colelem placeholder" data-placeholder-for="u5232_content"><!-- placeholder node --></span>
-          <span class="colelem placeholder" data-placeholder-for="u5233_content"><!-- placeholder node --></span>
-          <span class="colelem placeholder" data-placeholder-for="u5234_content"><!-- placeholder node --></span>
-         </div>
-        </div>
-       </div>
-       <div class="popup_anchor temp_no_id" data-orig-id="u5235popup">
-        <div class="ContainerGroup clearfix temp_no_id" data-orig-id="u5235"><!-- stack box -->
-         <div class="Container invi clearfix grpelem temp_no_id" data-orig-id="u5236"><!-- group -->
-          <div class="PamphletWidget clearfix grpelem temp_no_id" data-orig-id="pamphletu6020"><!-- none box -->
-           <div class="ThumbGroup clearfix grpelem temp_no_id" data-orig-id="u6025"><!-- none box -->
-            <div class="popup_anchor temp_no_id" data-orig-id="u6026popup">
-             <div class="Thumb popup_element clearfix temp_no_id" data-orig-id="u6026"><!-- column -->
-              <span class="colelem placeholder" data-placeholder-for="u6029_content"><!-- placeholder node --></span>
-              <span class="colelem placeholder" data-placeholder-for="u6027_content"><!-- placeholder node --></span>
-              <span class="colelem placeholder" data-placeholder-for="u6028_content"><!-- placeholder node --></span>
-             </div>
-            </div>
-           </div>
-           <div class="popup_anchor temp_no_id" data-orig-id="u6030popup">
-            <div class="ContainerGroup clearfix temp_no_id" data-orig-id="u6030"><!-- stack box -->
-             <div class="Container invi clearfix grpelem temp_no_id" data-orig-id="u6031"><!-- column -->
-              <span class="museBGSize clearfix colelem placeholder" data-placeholder-for="u6041-3_content"><!-- placeholder node --></span>
-              <span class="clearfix colelem placeholder" data-placeholder-for="u6040-4_content"><!-- placeholder node --></span>
-              <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u6036-4_content"><!-- placeholder node --></span>
-              <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u6037-4_content"><!-- placeholder node --></span>
-              <span class="nonblock nontext MuseLinkActive clearfix colelem placeholder" data-placeholder-for="u6039-4_content"><!-- placeholder node --></span>
-              <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u6038-4_content"><!-- placeholder node --></span>
-              <span class="clearfix colelem placeholder" data-placeholder-for="pu6042_content"><!-- placeholder node --></span>
-             </div>
-            </div>
-           </div>
-           <div class="popup_anchor temp_no_id" data-orig-id="u6022popup">
-            <div class="PamphletCloseButton PamphletLightboxPart popup_element clearfix temp_no_id" data-orig-id="u6022"><!-- group -->
-             <span class="grpelem placeholder" data-placeholder-for="u6024_content"><!-- placeholder node --></span>
-             <span class="grpelem placeholder" data-placeholder-for="u6023_content"><!-- placeholder node --></span>
-            </div>
-           </div>
-          </div>
-          <span class="museBGSize clearfix grpelem placeholder" data-placeholder-for="u5240-3_content"><!-- placeholder node --></span>
-          <span class="nonblock nontext museBGSize grpelem placeholder" data-placeholder-for="u5242_content"><!-- placeholder node --></span>
-          <span class="clearfix grpelem placeholder" data-placeholder-for="pu5237-4_content"><!-- placeholder node --></span>
-          <span class="nonblock nontext museBGSize grpelem placeholder" data-placeholder-for="u5241_content"><!-- placeholder node --></span>
-         </div>
-        </div>
-       </div>
-       <div class="popup_anchor temp_no_id" data-orig-id="u5227popup">
-        <div class="PamphletCloseButton PamphletLightboxPart popup_element clearfix temp_no_id" data-orig-id="u5227"><!-- group -->
-         <span class="grpelem placeholder" data-placeholder-for="u5228_content"><!-- placeholder node --></span>
-         <span class="grpelem placeholder" data-placeholder-for="u5229_content"><!-- placeholder node --></span>
+    <div class="clearfix grpelem" id="pu6188"><!-- group -->
+     <span class="grpelem placeholder" data-placeholder-for="u6188_content"><!-- placeholder node --></span>
+     <!-- m_editable region-id="editable-static-tag-U5482-BP_380" template="events.html" data-type="html" data-ice-options="disableImageResize,link" -->
+     <span class="Title clearfix grpelem placeholder" data-placeholder-for="u5482-4_content"><!-- placeholder node --></span>
+     <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U5524" template="events.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
+     <span class="nonblock nontext museBGSize grpelem placeholder" data-placeholder-for="u5524_content"><!-- placeholder node --></span>
+     <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U8225" template="events.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
+     <span class="nonblock nontext museBGSize grpelem placeholder" data-placeholder-for="u8225_content"><!-- placeholder node --></span>
+     <!-- /m_editable -->
+     <div class="PamphletWidget clearfix grpelem temp_no_id" data-orig-id="pamphletu5224"><!-- none box -->
+      <div class="ThumbGroup clearfix grpelem temp_no_id" data-orig-id="u5230"><!-- none box -->
+       <div class="popup_anchor temp_no_id" data-orig-id="u5231popup">
+        <div class="Thumb popup_element clearfix temp_no_id" data-orig-id="u5231"><!-- column -->
+         <span class="colelem placeholder" data-placeholder-for="u5232_content"><!-- placeholder node --></span>
+         <span class="colelem placeholder" data-placeholder-for="u5233_content"><!-- placeholder node --></span>
+         <span class="colelem placeholder" data-placeholder-for="u5234_content"><!-- placeholder node --></span>
         </div>
        </div>
       </div>
+      <div class="popup_anchor temp_no_id" data-orig-id="u5235popup">
+       <div class="ContainerGroup clearfix temp_no_id" data-orig-id="u5235"><!-- stack box -->
+        <div class="Container invi clearfix grpelem temp_no_id" data-orig-id="u5236"><!-- group -->
+         <div class="PamphletWidget clearfix grpelem temp_no_id" data-orig-id="pamphletu6020"><!-- none box -->
+          <div class="ThumbGroup clearfix grpelem temp_no_id" data-orig-id="u6025"><!-- none box -->
+           <div class="popup_anchor temp_no_id" data-orig-id="u6026popup">
+            <div class="Thumb popup_element clearfix temp_no_id" data-orig-id="u6026"><!-- column -->
+             <span class="colelem placeholder" data-placeholder-for="u6029_content"><!-- placeholder node --></span>
+             <span class="colelem placeholder" data-placeholder-for="u6027_content"><!-- placeholder node --></span>
+             <span class="colelem placeholder" data-placeholder-for="u6028_content"><!-- placeholder node --></span>
+            </div>
+           </div>
+          </div>
+          <div class="popup_anchor temp_no_id" data-orig-id="u6030popup">
+           <div class="ContainerGroup clearfix temp_no_id" data-orig-id="u6030"><!-- stack box -->
+            <div class="Container invi clearfix grpelem temp_no_id" data-orig-id="u6031"><!-- column -->
+             <span class="museBGSize clearfix colelem placeholder" data-placeholder-for="u6041-3_content"><!-- placeholder node --></span>
+             <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u6040-4_content"><!-- placeholder node --></span>
+             <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u6036-4_content"><!-- placeholder node --></span>
+             <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u6037-4_content"><!-- placeholder node --></span>
+             <span class="nonblock nontext MuseLinkActive clearfix colelem placeholder" data-placeholder-for="u6039-4_content"><!-- placeholder node --></span>
+             <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u6038-4_content"><!-- placeholder node --></span>
+             <span class="clearfix colelem placeholder" data-placeholder-for="pu6042_content"><!-- placeholder node --></span>
+            </div>
+           </div>
+          </div>
+          <div class="popup_anchor temp_no_id" data-orig-id="u6022popup">
+           <div class="PamphletCloseButton PamphletLightboxPart popup_element clearfix temp_no_id" data-orig-id="u6022"><!-- group -->
+            <span class="grpelem placeholder" data-placeholder-for="u6024_content"><!-- placeholder node --></span>
+            <span class="grpelem placeholder" data-placeholder-for="u6023_content"><!-- placeholder node --></span>
+           </div>
+          </div>
+         </div>
+         <span class="museBGSize clearfix grpelem placeholder" data-placeholder-for="u5240-3_content"><!-- placeholder node --></span>
+         <span class="nonblock nontext museBGSize grpelem placeholder" data-placeholder-for="u5242_content"><!-- placeholder node --></span>
+         <span class="clearfix grpelem placeholder" data-placeholder-for="pu5237-4_content"><!-- placeholder node --></span>
+         <span class="nonblock nontext museBGSize grpelem placeholder" data-placeholder-for="u5241_content"><!-- placeholder node --></span>
+        </div>
+       </div>
+      </div>
+      <div class="popup_anchor temp_no_id" data-orig-id="u5227popup">
+       <div class="PamphletCloseButton PamphletLightboxPart popup_element clearfix temp_no_id" data-orig-id="u5227"><!-- group -->
+        <span class="grpelem placeholder" data-placeholder-for="u5228_content"><!-- placeholder node --></span>
+        <span class="grpelem placeholder" data-placeholder-for="u5229_content"><!-- placeholder node --></span>
+       </div>
+      </div>
      </div>
-     <span class="colelem placeholder" data-placeholder-for="u6188_content"><!-- placeholder node --></span>
-     <!-- m_editable region-id="editable-static-tag-U8225" template="events.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
-     <span class="nonblock nontext museBGSize colelem placeholder" data-placeholder-for="u8225_content"><!-- placeholder node --></span>
-     <!-- /m_editable -->
-     <!-- m_editable region-id="editable-static-tag-U5524" template="events.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
-     <span class="nonblock nontext museBGSize colelem placeholder" data-placeholder-for="u5524_content"><!-- placeholder node --></span>
-     <!-- /m_editable -->
     </div>
     <span class="anchor_item grpelem placeholder" data-placeholder-for="top_content"><!-- placeholder node --></span>
-    <div class="verticalspacer" data-offset-top="484" data-content-above-spacer="484" data-content-below-spacer="80"></div>
+    <div class="verticalspacer" data-offset-top="484" data-content-above-spacer="535" data-content-below-spacer="80"></div>
     <span class="nonblock nontext rounded-corners clearfix grpelem placeholder" data-placeholder-for="u5290-4_content"><!-- placeholder node --></span>
    </div>
    <div class="preload_images">
