--- a/sermon.html
+++ b/sermon.html
@@ -17,8 +17,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Sermon</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3866580668"/>
-  <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=209653806"/>
-  <link rel="stylesheet" type="text/css" href="css/sermon.css?crc=4112791007" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=3953320884"/>
+  <link rel="stylesheet" type="text/css" href="css/sermon.css?crc=4070347646" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
@@ -28,7 +28,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/open-sans:n3,n4:default;abel:n4:default.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/j5Rs64Oqbxcp59f0T7rVbN49HTgMqnAkPMOtRsBzjCCfeCJgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFhzMsMMeMw6MKGHfFczMsMMeMb6MqGIQWmDZZMgr5_s3b9.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/0T-113D9z55snCqE9wEoV-KUvHLUd5YqPWzxcvHRKXCfeCJgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFhzMsMMeMw6MKGHfFczMsMMeMb6MqGIQWmDZZMgnxOs3b9.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -37,8 +37,36 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    </head>
  <body>
 
-  <div class="clearfix" id="page"><!-- column -->
-   <div class="clearfix colelem" id="ppamphletu5224"><!-- group -->
+  <div class="clearfix" id="page"><!-- group -->
+   <div class="clearfix grpelem" id="pu6188"><!-- group -->
+    <div class="grpelem" id="u6188"><!-- simple frame --></div>
+    <!-- m_editable region-id="editable-static-tag-U5427-BP_infinity" template="sermon.html" data-type="html" data-ice-options="disableImageResize,link" -->
+    <div class="Title clearfix grpelem" id="u5427-4" data-muse-uid="U5427" data-muse-type="txt_frame"><!-- content -->
+     <h1>Sermons</h1>
+    </div>
+    <!-- /m_editable -->
+    <div class="grpelem" id="u5429"><!-- simple frame --></div>
+    <!-- m_editable region-id="editable-static-tag-U5430-BP_infinity" template="sermon.html" data-type="html" data-ice-options="disableImageResize,link" -->
+    <div class="clearfix grpelem" id="u5430-4" data-muse-uid="U5430" data-muse-type="txt_frame"><!-- content -->
+     <p>Recent sermons from the 5pm service</p>
+    </div>
+    <!-- /m_editable -->
+    <div class="clearfix grpelem" id="u5460"><!-- column -->
+     <div class="colelem" id="u5451"><!-- simple frame --></div>
+     <!-- m_editable region-id="editable-static-tag-U5457-BP_infinity" template="sermon.html" data-type="html" data-ice-options="disableImageResize,link" -->
+     <div class="clearfix colelem" id="u5457-4" data-muse-uid="U5457" data-muse-type="txt_frame"><!-- content -->
+      <p>Barry Littleford // 25.9.2016 // Repentance</p>
+     </div>
+     <!-- /m_editable -->
+    </div>
+    <div class="clearfix grpelem" id="u5463"><!-- column -->
+     <div class="colelem" id="u5464"><!-- simple frame --></div>
+     <!-- m_editable region-id="editable-static-tag-U5465-BP_infinity" template="sermon.html" data-type="html" data-ice-options="disableImageResize,link" -->
+     <div class="clearfix colelem" id="u5465-4" data-muse-uid="U5465" data-muse-type="txt_frame"><!-- content -->
+      <p>Jordan Gauci // 18.9.2016 // jdfbgksjdbfg</p>
+     </div>
+     <!-- /m_editable -->
+    </div>
     <div class="PamphletWidget clearfix grpelem" id="pamphletu5224"><!-- none box -->
      <div class="ThumbGroup clearfix grpelem" id="u5230"><!-- none box -->
       <div class="popup_anchor" id="u5231popup">
@@ -80,9 +108,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
             <div class="museBGSize clearfix colelem" id="u6041-3"><!-- content -->
              <p>&nbsp;</p>
             </div>
-            <div class="clearfix colelem" id="u6040-4"><!-- content -->
-             <p id="u6040-2">READINGS</p>
-            </div>
+            <a class="nonblock nontext clearfix colelem" id="u6040-4" href="bible-readings.html" data-href="page:U7278"><!-- content --><p id="u6040-2">READINGS</p></a>
             <a class="nonblock nontext MuseLinkActive clearfix colelem" id="u6036-4" href="sermon.html" data-href="page:U5450"><!-- content --><p id="u6036-2">SERMONS</p></a>
             <a class="nonblock nontext clearfix colelem" id="u6037-4" href="discipleship.html" data-href="page:U5578"><!-- content --><p id="u6037-2">DISCIPLESHIP</p></a>
             <a class="nonblock nontext clearfix colelem" id="u6039-4" href="events.html" data-href="page:U5505"><!-- content --><p id="u6039-2">EVENTS</p></a>
@@ -114,38 +140,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
     <a class="anchor_item grpelem" id="top"></a>
    </div>
-   <!-- m_editable region-id="editable-static-tag-U5427-BP_infinity" template="sermon.html" data-type="html" data-ice-options="disableImageResize,link" -->
-   <div class="Title clearfix colelem" id="u5427-4" data-muse-uid="U5427" data-muse-type="txt_frame"><!-- content -->
-    <h1>Sermons</h1>
-   </div>
-   <!-- /m_editable -->
-   <div class="clearfix colelem" id="pu6188"><!-- group -->
-    <div class="grpelem" id="u6188"><!-- simple frame --></div>
-    <div class="grpelem" id="u5429"><!-- simple frame --></div>
-   </div>
-   <!-- m_editable region-id="editable-static-tag-U5430-BP_infinity" template="sermon.html" data-type="html" data-ice-options="disableImageResize,link" -->
-   <div class="clearfix colelem" id="u5430-4" data-muse-uid="U5430" data-muse-type="txt_frame"><!-- content -->
-    <p>Recent sermons from the 5pm service</p>
-   </div>
-   <!-- /m_editable -->
-   <div class="clearfix colelem" id="u5460"><!-- column -->
-    <div class="colelem" id="u5451"><!-- simple frame --></div>
-    <!-- m_editable region-id="editable-static-tag-U5457-BP_infinity" template="sermon.html" data-type="html" data-ice-options="disableImageResize,link" -->
-    <div class="clearfix colelem" id="u5457-4" data-muse-uid="U5457" data-muse-type="txt_frame"><!-- content -->
-     <p>Barry Littleford // 25.9.2016 // Repentance</p>
-    </div>
-    <!-- /m_editable -->
-   </div>
-   <div class="clearfix colelem" id="u5463"><!-- column -->
-    <div class="colelem" id="u5464"><!-- simple frame --></div>
-    <!-- m_editable region-id="editable-static-tag-U5465-BP_infinity" template="sermon.html" data-type="html" data-ice-options="disableImageResize,link" -->
-    <div class="clearfix colelem" id="u5465-4" data-muse-uid="U5465" data-muse-type="txt_frame"><!-- content -->
-     <p>Jordan Gauci // 18.9.2016 // jdfbgksjdbfg</p>
-    </div>
-    <!-- /m_editable -->
-   </div>
-   <div class="verticalspacer" data-offset-top="596" data-content-above-spacer="595" data-content-below-spacer="111"></div>
-   <a class="nonblock nontext rounded-corners clearfix colelem" id="u5290-4" href="index.html#top" data-href="anchor:U775:U1260"><!-- content --><p id="u5290-2">RETURN HOME</p></a>
+   <div class="verticalspacer" data-offset-top="596" data-content-above-spacer="595" data-content-below-spacer="81"></div>
+   <a class="nonblock nontext rounded-corners clearfix grpelem" id="u5290-4" href="index.html#top" data-href="anchor:U775:U1260"><!-- content --><p id="u5290-2">RETURN HOME</p></a>
   </div>
   <div class="preload_images">
    <img class="preload" src="images/fbvector-colour.png?crc=3931600933" alt=""/>
