--- a/bible-readings.html
+++ b/bible-readings.html
@@ -18,7 +18,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3866580668"/>
   <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=3953320884"/>
-  <link rel="stylesheet" type="text/css" href="css/bible-readings.css?crc=4101312536" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/bible-readings.css?crc=3872402989" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_master.css?crc=3824530138" id="nomq_pagesheet"/>
@@ -32,7 +32,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/open-sans:n4,n3:default;abel:n4:default.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/JrXTfuSmOQYJFLwNyQ68Z_mz-MVOybZcoTIaVOhShS9feCJgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFczMsMMeMb6MKGHfFhzMsMMeMw6MqGIQWmDZZMglxOs3b9.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/5xzpnSZNGMmWJcVm3SEVWtTRro_VpZnBwB_LPo8VNebfeCJgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFczMsMMeMb6MKGHfFhzMsMMeMw6MqGIQWmDZZMgxxWs3b9.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -68,10 +68,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <!-- m_editable region-id="editable-static-tag-U7248-BP_infinity" template="bible-readings.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
     <a class="nonblock nontext clearfix colelem" id="u7248-4" href="https://www.bible.com/bible/68/1pe.3" data-muse-uid="U7248" data-muse-type="txt_frame"><!-- content --><p><span id="u7248">View online</span></p></a>
     <!-- /m_editable -->
-    <!-- m_editable region-id="editable-static-tag-U7249-BP_infinity" template="bible-readings.html" data-type="html" data-ice-options="disableImageResize,link" -->
-    <div class="clearfix colelem" id="u7249-4" data-muse-uid="U7249" data-muse-type="txt_frame"><!-- content -->
-     <p><span id="u7249">This weeks passage</span></p>
-    </div>
+    <!-- m_editable region-id="editable-static-tag-U7249-BP_infinity" template="bible-readings.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+    <a class="nonblock nontext clearfix colelem" id="u7249-4" href="last-weeks-br.html" data-href="page:U6228" data-muse-uid="U7249" data-muse-type="txt_frame"><!-- content --><p><span id="u7249">Last weeks passage</span></p></a>
     <!-- /m_editable -->
    </div>
    <a class="anchor_item grpelem" id="top"></a>
@@ -150,7 +148,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    </div>
    <!-- m_editable region-id="editable-static-tag-U7246-BP_infinity" template="bible-readings.html" data-type="html" data-ice-options="disableImageResize,link" -->
    <div class="clearfix grpelem" id="u7246-4" data-muse-uid="U7246" data-muse-type="txt_frame"><!-- content -->
-    <p>Last weeks passage</p>
+    <p>This weeks passage</p>
    </div>
    <!-- /m_editable -->
    <div class="grpelem" id="u6188"><!-- simple frame --></div>
