--- a/last-weeks-br.html
+++ b/last-weeks-br.html
@@ -18,7 +18,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3866580668"/>
   <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=3953320884"/>
-  <link rel="stylesheet" type="text/css" href="css/last-weeks-br.css?crc=4142430335" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/last-weeks-br.css?crc=4034899858" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_master.css?crc=3824530138" id="nomq_pagesheet"/>
@@ -32,7 +32,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/open-sans:n4,n3:default;abel:n4:default.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/BIQalO7y0GQZtTVOH7drn2wfJWqoFlgbcd-MuGH-hSqfeCJgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFczMsMMeMb6MKGHfFhzMsMMeMw6MqGIQWmDZZMglLOs3b9.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/SzcQ7Q5JwONpH9Tz6pwIQxU0cGVfrjkEIgtU8Ys9c_6feCJgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFczMsMMeMb6MKGHfFhzMsMMeMw6MqGIQWmDZZMgxzWs3b9.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -68,10 +68,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <!-- m_editable region-id="editable-static-tag-U6206-BP_infinity" template="last-weeks-br.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
     <a class="nonblock nontext clearfix colelem" id="u6206-4" href="https://www.bible.com/bible/68/1pe.3" data-muse-uid="U6206" data-muse-type="txt_frame"><!-- content --><p><span id="u6206">View online</span></p></a>
     <!-- /m_editable -->
-    <!-- m_editable region-id="editable-static-tag-U6205-BP_infinity" template="last-weeks-br.html" data-type="html" data-ice-options="disableImageResize,link" -->
-    <div class="clearfix colelem" id="u6205-4" data-muse-uid="U6205" data-muse-type="txt_frame"><!-- content -->
-     <p><span id="u6205">This weeks passage</span></p>
-    </div>
+    <!-- m_editable region-id="editable-static-tag-U6205-BP_infinity" template="last-weeks-br.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+    <a class="nonblock nontext clearfix colelem" id="u6205-4" href="bible-readings.html" data-href="page:U7278" data-muse-uid="U6205" data-muse-type="txt_frame"><!-- content --><p><span id="u6205">This weeks passage</span></p></a>
     <!-- /m_editable -->
    </div>
    <a class="anchor_item grpelem" id="top"></a>
